<resources>
    <string name="app_name">The Man and the Machine</string>
    <string name="start">Start</string>
    <string name="continue_game">Continue</string>
    <string name="previous_Games">Previous Games</string>
    <string name="credits">Credits</string>
    <string name="title"><i>The Man and the Machine</i></string>
    <string name="credits_one">Written and created by:</string>
    <string name="credits_two">Brian</string>
    <string name="credits_three">Hi. This is my first app. It is inspired by, and hopefully not <i>too</i> derivative of, the absolute gem of a game called Seedship whose link can be found below.</string>
    <string name="credits_four">Thanks for playing!</string>
    <string name="twitter_share">Share on Twitter</string>
    <string name="insta_share">Share on Instagram</string>
    <string name="fb_share">Share on Facebook</string>
    <string name="seedship">Seedship</string>
    <string name="test_link">"<a href='http://play.google.com/store/apps/details?id=com.johnayliff.seedship'><u>Seedship</u></a>"</string>
    <string name="next_day">Continue</string>
    <string name="next">Next</string>
    <string name="done">Done</string>
    <string name="back">Back</string>
    <string name="confirm">Confirm</string>
    <string name="active_game">This will overwrite your current game. Are you sure you wish to proceed?</string>
    <string name="skip_intro">"Skip Intro"</string>
    <string name="stat_percentage">%1$s%2$s</string>
    <string name="percent_sign">%</string>
    <string name="machine_header">The Machine</string>
    <string name="man_header">The Man</string>
    <string name="strength">Strength:</string>
    <string name="dexterity">Dexterity:</string>
    <string name="intelligence">Intelligence:</string>
    <string name="loyalty">Loyalty:</string>
    <string name="beauty">Beauty:</string>
    <string name="strength_creator">Strength Infuser:</string>
    <string name="dexterity_creator">Dexterity Animator:</string>
    <string name="intelligence_creator">Intelligence Designer:</string>
    <string name="loyalty_creator">Loyalty Inculcator:</string>
    <string name="beauty_creator">Beauty Sculptor:</string>
    <string name="building_creature">Building…</string>
    <string name="unknown_stat">Unknown</string>
    <string name="stats_reveal">Flux Injections:</string>
    <string name="use_injection">Use Injection</string>
    <string name="injection_result">The flux particles ooze into the placental chamber, connecting creature to machine, invigorating broken parts, and creating something out of nothing.</string>
    <string name="post_injection">The flux particles have performed their function well, and you are the wiser for it.</string>
    <string name="destroy_creature">Activate Incinerator</string>
    <string name="create_creature">Summon Creature</string>
    <string name="confirm_creature">Yes, release the beast!</string>
    <string name="cancel_creature">On second thought…</string>
    <string name="warning_dialogue">Are you sure you wish to create this monstrosity? It will require all available resources, and no other creations will be possible!
    </string>
    <string name="quirks">Quirks:</string>
    <string name="none">None</string>
    <string name="infected"><i>Infected</i></string>
    <string name="insane"><i>The Insane Man</i></string>
    <string name="broken"><i>The Broken Machine</i></string>
    <string name="machine_gone">Seeing your life\'s work reduced to naught but a broken lottery of failing parts, you allow hopelessness to envelop you, retreating with a torrent of tormented tongues into the inner recesses of your mind.\n\nWith the measures taken to prevent to unauthorized entry into your lair, there is simply no chance of anyone finding your catatonic form before it expires. </string>
    <string name="endUpgrade"><i>Upgraded</i></string>
    <string name="endDowngrade"><i>Downgraded</i></string>
    <string name="launch_success">Launch Success:</string>
    <string name="end_territory">Terror Inflicted:</string>
    <string name="end_support">Support Reaped:</string>
    <string name="home">Home:</string>
    <string name="end_scenario">Ending:</string>
    <string name="total_score">Total Score:</string>
    <string name="end_rank">Final Rank:</string>
    <string name="date_header"><b>Date</b></string>
    <string name="rank_header"><b>Rank</b></string>
    <string name="score_header"><b>Score</b></string>
    <string name="free">remain free</string>
    <string name="prison">are unable to remain free</string>
    <string name="final_rank">Final Rank:</string>
    <string name="highscore_heading"><b>Memoirs of Bygone Lives</b></string>
    <string name="end_one">%1$s </string>
    <string name="end_two">%1$s %2$s </string>
    <string name="end_two_par">%1$s\n\n%2$s </string>
    <string name="end_three">%1$s\n\n%2$s\n\n%3$s </string>
    <string name="end_three_noPar">%1$s %2$s %3$s  </string>
    <string name="end_four">%1$s\n\n%2$s\n\n%3$s\n\n%4$s </string>
    <string name="end_four_noPar">%1$s %2$s %3$s %4$s </string>
    <string name="end_five">%1$s\n\n%2$s\n\n%3$s\n\n%4$s\n\n%5$s</string>
    <string name="end_six">%1$s\n\n%2$s\n\n%3$s\n\n%4$s\n\n%5$s\n\n%6$s</string>
    <string name="end_arrays">%1$s %2$s %3$s %4$s\n\n%5$s</string>
    <string name="end_five_noPar">%1$s%2$s%3$s%4$s%5$s</string>
    <string name="end_six_noPar">%1$s %2$s %3$s %4$s %5$s %6$s</string>
    <string name="end_seven_noPar">%1$s %2$s %3$s %4$s %5$s %6$s %7$s</string>
    <string name="end_eight_noPar">%1$s %2$s %3$s %4$s %5$s %6$s %7$s %8$s</string>
    <string name="dead">Dead</string>
    <string name="creature_stats"><i>On this day, the creature known as %1$s, in tandem with its creator and with nimble fortitude did strike bloody terror into the hearts of %2$s people, whilst through marriage of beauty and guile win the blessings of %3$s (per post-rampage non-partisan polling)</i>.</string>
    <string name="creature_stats_two"><i>On this day, the creature known as %1$s, did attempt with valiance and bravery to carry out its master\'s bidding. Alas, its charge was cut short by enemies about with slings and arrows shot true.</i></string>
    <string name="end_poem">Can death be sleep, when life is but a dream,\nAnd scenes of bliss pass as a phantom by?\nThe transient pleasures as a vision seem,\nAnd yet we think the greatest pain\'s to die.\n\nHow strange it is that man on earth should roam,
     \nAnd lead a life of woe, but not forsake\nHis rugged path; nor dare he view alone\nHis future doom which is but to awake.</string>
    <string name="keats">-John Keats</string>
    <string name="bad_fire">Gads! Though it harnesses the power of a trillion PowerPoint lasers, the incinerator cannot quite seem to eat through the hodgepodge of metals, fabric, and synthetic skin that constitute this wretched creation. The smoke and smell of charred resins is fast becoming untenable in your precisely ventilated lair, and you must act quickly to remedy this.\n\nYou can either seal the incinerator and vent the outputs, which would unleash a very noticeable plume party of toxic vapors into the air, or take care of the problem the old fashion way, with a chainsaw and elbow grease. </string>
    <string name="fire_choice_one">Vent the incinerator</string>
    <string name="fire_choice_two">Get your hands dirty</string>
    <string name="fire_one_result">You flip a set of switches, sealing the incinerator\'s titanium doors and fully venting its outward bound exhausts. Though a potentially fatal danger is averted, you can practically feel the prying gaze of the outside world upon you. </string>
    <string name="fire_two_result">Not content to advertise your devious machinations to the world, you grab a Ne\'er-de-Break chainsaw and proceed to "get hacking," as the kids would say. Manual labor has never been your strong suit, and the task proceeds at a maddeningly difficult pace.\n\nWhen the failed creation is at last sufficiently sliced into flammable pieces, you are left exhausted and not a little bit unstrung.</string>
    <string name="fire_one_result_two">Alas, with the eyes of the world upon you already, there is precious little further attention that an extra ton of poisonous clouds will invite. This bit of salience is as disquieting as it is dire, and you are none the better for it. </string>
    <string name="sanity">Sanity:</string>
    <string name="endurance">Endurance:</string>
    <string name="wealth">Wealth: </string>
    <string name="anonymity">Anonymity:</string>
    <string name="generator_scanner">Generator Scanner</string>
    <string name="strength_fail">Allow the Strength Infuser to starve.</string>
    <string name="dexterity_fail">Allow the Dexterity Animator to starve.</string>
    <string name="intelligence_fail">Allow the Intelligence Designer to starve.</string>
    <string name="loyalty_fail">Allow the loyalty Inculcator to starve.</string>
    <string name="beauty_fail">Allow the Beauty Sculptor to starve.</string>
    <string name="saving_grace">Steel yourself with the resolve of a thousand stags and WILL a saving grace into action. </string>
    <string name="strength_upgrade">Upgrade the Strength Infuser.</string>
    <string name="dexterity_upgrade">Upgrade the Dexterity Animator</string>
    <string name="intelligence_upgrade">Upgrade the Intelligence Designer</string>
    <string name="loyalty_upgrade">Upgrade the loyalty Inculcator </string>
    <string name="beauty_upgrade">Upgrade the Beauty Sculptor</string>
    <string name="upgrade_complete">The very walls quake as %1$s scream painful deaths, %2$s cry with tormented agony, and the blood of purity incarnate is spilt like so much spoiled milk. At last, The %3$s hums brighter and stronger.</string>
    <string name="str_upgrade_text">Stronger, tougher, more muscular! No longer will your creation be relegated to the weakest of the weak. It will, at the very least, rise above the dregs of the abomination food chain.</string>
    <string name="dex_upgrade_text">If being burnt in the sad space between inertia and sentience can teach one anything, it is how to move faster than an uphill rolling sloth. Your creation will be guaranteed a minimum speed and agility. </string>
    <string name="temp_upgrade_text">A constant state of rejection has been found, in adolescents, to contribute to an array of maladaptive traits and behaviors, not the least of which is general intelligence. Luckily for you, your abomination-in-training is not an adolescent. It will be assured a base level of emotional stability.</string>
    <string name="obed_upgrade_text">One would assume that continuous deaths by countless licks of flame would engender a state of contempt, at best. Fortunately, the laws of causal personality inheritance are the least egregious being broken in this place, and as such your creation can now enjoy a permanent state of not-all-consuming-truculence.</string>
    <string name="char_upgrade_text">Though general beauty is in the eye of the beholder, manufactured beauty is the only horse a savvy gambler puts money on. By the time your abomination goes forth to conquer the world, you hope that it will be so charming that none will notice the hideous assortment of unholy bits that makes up its component parts. At the very least, you can ensure it does not terrify the elderly until it\'s ready.</string>
    <string name="end_obed_success">Cattle prods, dazzling rhetoric and abject begging, oh my! You are able to persuade the creature to be more receptive to your wishes.</string>
    <string name="end_obed_failure">Don\'t sell the farm just yet, Wilbur. You fumble over your arguments, and physical coercion is met with a dead stare. The creature remains unpersuaded.</string>
</resources>