<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="26sp"
        android:layout_marginTop="120dp">
    </TextView>

    <Button
        android:id="@+id/start_game"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:textColor="@color/White"
        app:backgroundTint="@color/transparent"
        app:cornerRadius="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rippleColor="#33AAAAAA"
        app:strokeColor="@color/dark_teal"
        app:strokeWidth="2dp" />

    <TextView
        android:id="@+id/active_game"
        app:layout_constraintTop_toBottomOf="@id/credits"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/active_game"
        android:gravity="center">
    </TextView>

    <Button
        android:id="@+id/continue_game"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/continue_game"
        android:textColor="@color/White"
        app:backgroundTint="@color/transparent"
        app:cornerRadius="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_game"
        app:rippleColor="#33AAAAAA"
        app:strokeColor="@color/dark_teal"
        app:strokeWidth="2dp" />

    <Button
        android:id="@+id/previous_games"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/previous_Games"
        android:textColor="@color/White"
        app:backgroundTint="@color/transparent"
        app:cornerRadius="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/continue_game"
        app:rippleColor="#33AAAAAA"
        app:strokeColor="@color/dark_teal"
        app:strokeWidth="2dp" />

    <Button
        android:id="@+id/credits"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="128dp"
        android:text="@string/credits"
        android:textColor="@color/White"
        app:backgroundTint="@color/transparent"
        app:cornerRadius="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/previous_games"
        app:rippleColor="#33AAAAAA"
        app:strokeColor="@color/dark_teal"
        app:strokeWidth="2dp" />


</androidx.constraintlayout.widget.ConstraintLayout>